--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
         "php-amqplib/php-amqplib": "^2.7"
     },
     "require-dev": {
-        "monolog/monolog": "1.23",
-        "phpunit/phpunit": "^7.1"
+        "monolog/monolog": "1.23"
     },
     "autoload": {
         "psr-4": {
