--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "monolog/monolog": "1.23",
         "mgp25/instagram-php": "^4.0",
-        "php-amqplib/php-amqplib": "^2.7"
+        "php-amqplib/php-amqplib": "^2.7",
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
         "monolog/monolog": "1.23"
