--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "RMQConfig": {
-    "host": "127.0.0.1",
+    "host": "172.17.0.2",
     "port": "5672",
     "user": "admin",
     "password": "admin",
@@ -17,6 +17,6 @@
     "logDir": "logs",
     "logFileFormat": "eyes_instadm.log",
     "dateFormat": "Y-m-d H:i:s",
-    "outputFormat": "[%datetime%] %channel%.%level_name%: %message% %context% %extra%\n"
+    "outputFormat": "[%datetime%] %channel%.%level_name%: %message%\n"
   }
 }
